cmake_minimum_required(VERSION 3.10)
project(Concurrent)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(1_Thread)
add_subdirectory(2_Lambda)
add_subdirectory(3_Barrier)
add_subdirectory(4_Bug)
add_subdirectory(5_FunctionObject)
add_subdirectory(6_PassArgs)
add_subdirectory(7_Future)
add_subdirectory(8_Except)
add_subdirectory(9_Async)
add_subdirectory(10_BadPass)
add_subdirectory(11_BadConst)
add_subdirectory(12_FileList)
add_subdirectory(13_FileMonitor)
add_subdirectory(14_BankAccount)
add_subdirectory(15_BankTransfer)
add_subdirectory(16_BankDeadlock)
add_subdirectory(17_FilePolling)
add_subdirectory(18_Condition)
add_subdirectory(19_MessageQueue)
add_subdirectory(20_AtomicityBug)